--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -30,29 +30,82 @@
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
     // Array.prototype.filter()
-    // 1. Filter the list of inventors for those who were born in the 1500's
+    // 1. Filter the list of inventors for those who were born in the 1500'sort
+
+    const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const firstLast = inventors.map(inventor => inventor.first + ' ' + inventor.last);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    // const sortedBirthdate = inventors.sort(function(a,b){
+    //   if(a.year > b.year){
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   }
+    // });
+
+
+    const sortedBirthdate = inventors.sort((a,b) => a.year > b.year ? 1 : -1);
+
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalLived = inventors.reduce(function(total, inventor){
+      return total + (inventor.passed - inventor.year);
+    }, 0);
 
     // 5. Sort the inventors by years lived
 
+    const sortedYearsLived = inventors.sort(function(a,b){
+      const firstPerson = a.passed - a.year;
+      const nextPerson = b.passed - b.year;
+
+      return firstPerson > nextPerson ? 1 : -1;
+      
+    });
+
+    // console.table(sortedYearsLived);
+
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('li'));
+
+    // const de  = links
+    //               .map(link => link.textContent)
+    //               .filter(streetname => streetname.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const sortedPeople = people.sort((lastOne,  nextOne) => {
+
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+
+      return aLast > bLast ? 1 : -1;
+
+    });
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    
+    const transportation = data.reduce(function(obj, item){
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+
+      obj[item]++;
+
+      return obj;
+    }, {});
 
   </script>
 </body>
